# smart-light-gpo

./: .gitignore  README.md
backend/: .env.example  dev-process-hooks.mjs  nitro.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
backend/prisma/: schema.prisma
backend/server/lib/: auth.ts  currentUser.ts
backend/server/middleware/: auth.ts
backend/server/plugins/: process-errors.ts
backend/server/routes/: _ws.ts  index.js
backend/server/utils/: deviceStorage.ts  positioningRuntime.ts  sceneRuntime.ts  wsRuntime.ts
firmware/: CMakeLists.txt  README.md  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/components/ble_provisioning/: CMakeLists.txt  ble_provisioning.c  idf_component.yml
firmware/components/config_storage/: CMakeLists.txt  config_storage.c
firmware/components/led_controller/: CMakeLists.txt  led_controller.c  led_strip_encoder.c
firmware/components/servo_controller/: CMakeLists.txt  servo_controller.c
firmware/components/uwb_positioning/: CMakeLists.txt  uwb_positioning.c
firmware/components/web_server/: CMakeLists.txt  web_server.c
firmware/components/websocket_client/: CMakeLists.txt  websocket_client.c
firmware/components/wifi_manager/: CMakeLists.txt  (+1 more)
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
firmware/spiffs_image/: index.html
smart_light/: README.md  pubspec.yaml
smart_light/lib/: main.dart
smart_light/linux/: CMakeLists.txt
smart_light/test/: widget_test.dart
smart_light/web/: index.html  manifest.json
smart_light/windows/: CMakeLists.txt
(+69 files in other folders)
